spacing fixed

--- a/css/style.css
+++ b/css/style.css
@@ -311,14 +311,14 @@ footer p {
         flex-flow: wrap column-reverse;
     }
     img{
-        width: 80%;
+        width: 100%;
     }
 
     /* Recipie */
     .recipies .container {
         width: 600px;
         max-width: 100%;
-        padding: 50px 0;
+        padding: 50px 10px;
         /* margin: 0 auto; */
     }
     .block {
@@ -365,13 +365,10 @@ footer p {
     }
 
     /* Recipie */
-    .recipies .container {
-        padding: 50px 30px;
-    }
     .card{
         /* margin-bottom: 20px; */
         margin: 0 0 20px;
-        padding: 5px;
+        padding: 10px;
     }
     .counter{
         margin: 0 10px;
